testsuite/bsc.bugs/b676/Bug676_2.bsv
typedef Foo Bar;
typedef Bar Foo;

Foo x = 0;



